src/scss/_main.scss
/* ... */
.recent-build:hover .recent-build-tooltip,
.recent-build:focus .recent-build-tooltip {
  visibility: visible;
}

.recent-build:hover .recent-build-tooltip::after,
.recent-build-link:focus .recent-build-tooltip::after {
  position: absolute;
  bottom: 100%;

  margin-left: 0.5em;

  border-color: transparent;
  border-bottom-color: var(--color-bg-light);
  border-style: solid;

  border-width: 5px;

  content: ' ';
}

.recent-build-tooltip .line {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.recent-build-tooltip .number {
  margin-right: 0.5em;

  &:before {
    content: '#';
  }
}

.recent-build-tooltip .info {
  padding: 0.2em 0.6em;

  font-size: 0.9rem;
}

.steps {
  position: relative;

  .details {
    margin-bottom: 0;
  }
}

.step {
  display: flex;
}

.step.-line {
  background: linear-gradient(
    90deg,
    hsla(0, 0, 0, 0) calc(3.25em - 1px),
    hsla(0, 0%, 75%, 1) calc(3.25em),
    hsla(0, 0, 0, 0) calc(3.25em + 1px)
  );
}

.step.-line.-last {
  background-repeat: no-repeat;
  background-size: 100% 2em;
}

.step .-status {
  margin-top: 2rem;
  margin-right: 1rem;
  margin-left: 2.6rem;
}

.step .-icon-container {
  padding-top: 12px;
  padding-bottom: 12px;

  background: var(--color-bg);
}

.step-status-icon {
  margin-top: 18px;
  margin-right: 36px;
  margin-left: 36px;
}

.step .-icon.-pending {
  padding: 8px;

  border: 2px solid var(--color-bg-light);
  border-radius: 7px;

  fill: var(--color-bg-light);
}

.step .-view.-running {
  border-color: var(--color-yellow);
}

.step .-info {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.step .-info .-duration {
  font-family: var(--font-code);
}

.loading-logs {
  margin-top: 0.3em;
  margin-left: 0.3em;
  padding: 0.5em 0;
}

.logs-container {
  margin-right: -1rem;
  margin-left: -1rem;
  padding: 0.5em 0;

  background-color: var(--color-bg-dark);
}

.logs {
  font-weight: 300;
  font-size: 14px;
}

.log-table {
  table-layout: fixed;
  width: 100%;
}

.logs .line {
  display: flex;
  align-items: flex-start;
  margin: 0 0.5em;
}

.line .wrapper {
  display: flex;
  flex: 1;
  flex-direction: row;

  > code {
    flex: 1;
    margin-left: 1em;
  }
}

.line-number {
  padding: 0;
  position: relative;
  color: var(--color-primary);
  font-size: 14px;
  font-family: var(--font-code);

  background: none;
  border: none;

  user-select: none;

  width: 6ch;
}

.logs .-focus {
  background: var(--color-focus);
}

.line a {
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: underline;
  }
}

.no-logs {
  margin-left: 1.5em;
}

.step-error,
.step-skipped {
  margin-left: 1.5em;

  color: var(--color-red-light);
  font-size: 14px;
}

.step-error .message,
.step-skipped .message {
  margin-left: 0.2em;
}

.animated {
  animation-duration: 1s;

  animation-fill-mode: both;
}

// used by pablen/toasty Elm package
// stylelint-disable-next-line
.bounceInRight {
  animation-name: bounceInRight;
}

// used by pablen/toasty Elm package
// stylelint-disable-next-line
.fadeOutRightBig {
  animation-name: fadeOutRightBig;
}

.alerts {
  ol {
    display: flex;
    flex-direction: column-reverse;
  }

  li {
    flex: 0 0 auto;
  }
}

.alert-container-attributes {
  position: fixed;
  right: 0;
  bottom: 10px;

  width: 100%;
  max-width: 530px;
  margin: 0;
  padding: 0;

  list-style-type: none;
}

.alert-item-attributes {
  max-height: 100px;
  margin: 1em 1em 0 1em;

  // stylelint-disable-next-line
  transition: max-height 1.2s, margin-top 1.2s;
}

.alert-container {
  width: 500px;
  padding: 1em;

  color: var(--color-text);

  font-size: 14px;

  background-color: var(--color-bg-dark);
  border-radius: 5px;
  border-radius: 0;
  box-shadow: 0 5px 5px -5px hsla(0, 0%, 0%, 0.5);

  cursor: pointer;
}

.alert-container .-title {
  display: flex;

  justify-content: space-between;
  margin: 0;

  font-size: 1em;
}

.alert-container .-message {
  display: flex;
  flex-direction: row;
  justify-content: space-between;

  max-height: 3.25em;
  margin-top: 0.25em;
  margin-bottom: 0;
  overflow-y: auto;

  font-size: 0.9em;
}

.alert-container.-success {
  border: 1px solid var(--color-green);
}

.alert-container.-warning {
  border: 1px solid var(--color-yellow);
}

.alert-container.-error {
  border: 1px solid var(--color-red);
}

.-icon {
  fill: none;
  stroke: var(--color-primary);

  &.-check {
    background-color: var(--color-primary);

    stroke: var(--color-bg);
  }

  &.-check,
  &.-radio {
    fill: none;
  }

  &.-success {
    stroke: var(--color-green);
  }

  &.-running {
    stroke: var(--color-yellow);
  }

  &.-failure,
  &.-error {
    stroke: var(--color-red);
  }

  &.-pending {
    fill: var(--color-bg-light);
    stroke: var(--color-bg-light);
  }

  .-inner {
    fill: var(--color-primary);
  }

  &.-skip {
    stroke: var(--color-lavender);
  }
}

.pager-actions {
  display: flex;
  justify-content: space-between;
}

.pager-icon-next svg {
  margin-right: 0; // override global margin on svgs in buttons
  margin-left: 0.5em;
}

.icon.favorite-star {
  fill: none;
  stroke: var(--color-yellow);
  stroke-width: var(--line-width);
}

.icon.favorite-star.favorited {
  fill: var(--color-yellow);
}

.builds-favorite {
  display: flex;
  align-items: center;
}

// general utility class for callouts
.notice {
  padding: 1rem;

  font-size: 1rem;

  background: var(--color-bg-light);
}

// style for contextual help dropdown
.help {
  position: relative;
}
/* ... */

